# learn-chinese

./: .dockerignore  .gitignore  Dockerfile  README.md  chinese-words.csv  deploy.sh  docker-compose.yml  package-lock.json  package.json  pull-data.sh
app/: app.css  root.tsx  routes.ts
app/components/: add-word-dialog.tsx  frequency-coverage.tsx  toast.tsx  word-list-item.tsx  word-list.tsx
app/data/: tracked-words.json
app/hooks/: use-generate-cards.ts  use-tracked-words.ts
app/lib/: stats.ts  types.ts  words.server.ts
app/routes/: _index.tsx  api.export-anki.ts  api.generate-cards.ts  export.tsx  media.$.tsx  words.tsx
data/: README.md
doc/architecture/decisions/: 0002-css-grid-word-table.md
python-server/: Dockerfile  pyproject.toml  server.py
scripts/: build-word-index.ts  find-unmatched-cards.ts  sync-db.ts
scripts/generate-cards/: generate.py  pyproject.toml
