[project]
name = "python-server"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.40.0",
    "flask>=3.1.2",
    "flask-cors>=6.0.2",
    "genanki>=0.13.1",
    "google-cloud-texttospeech>=2.17.0",
    "httpx>=0.27.0",
    "pypinyin>=0.53.0",
    "python-dotenv>=1.0.0",
]
