[project]
name = "generate-cards"
version = "0.1.0"
description = "Generate missing card data (sentences, audio, images) for HSK words"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.52.0",
    "google-cloud-texttospeech>=2.24.0",
    "httpx>=0.28.0",
    "pypinyin>=0.53.0",
]

[tool.uv]
dev-dependencies = []
